test_report.txt

> react-typescript-starter@0.1.0 test
> react-scripts test --coverage

FAIL src/objects.test.ts
  ● Test suite failed to run

    SyntaxError: Unexpected token < in JSON at position 2052
        at JSON.parse (<anonymous>)

      12 |     mergeQuestion
      13 | } from "./objects";
    > 14 | import testQuestionData from "./data/questions.json";
         | ^
      15 | import backupQuestionData from "./data/questions.json";
      16 |
      17 | ////////////////////////////////////////////

      at Runtime._loadModule (node_modules/jest-runtime/build/index.js:1178:39)
      at Object.<anonymous> (src/objects.test.ts:14:1)

PASS src/arrays.test.ts
FAIL src/nested.test.ts
  ● Test suite failed to run

    SyntaxError: Unexpected token < in JSON at position 2052
        at JSON.parse (<anonymous>)

      18 |     duplicateQuestionInArray
      19 | } from "./nested";
    > 20 | import testQuestionData from "./data/questions.json";
         | ^
      21 | import backupQuestionData from "./data/questions.json";
      22 |
      23 | const {

      at Runtime._loadModule (node_modules/jest-runtime/build/index.js:1178:39)
      at Object.<anonymous> (src/nested.test.ts:20:1)

PASS src/functions.test.ts
PASS src/text.test.tsx
PASS src/HtmlCss.test.tsx
PASS src/App.test.tsx
----------------|---------|----------|---------|---------|-------------------
File            | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------------|---------|----------|---------|---------|-------------------
All files       |   45.89 |     53.7 |   38.02 |   45.58 |                   
 src            |   45.89 |     53.7 |   38.02 |   45.58 |                   
  App.tsx       |     100 |      100 |     100 |     100 |                   
  arrays.ts     |     100 |      100 |     100 |     100 |                   
  functions.ts  |     100 |      100 |     100 |     100 |                   
  nested.ts     |       0 |        0 |       0 |       0 | 10-271            
  objects.ts    |       0 |        0 |       0 |       0 | 13-164            
 src/interfaces |       0 |        0 |       0 |       0 |                   
  answer.ts     |       0 |        0 |       0 |       0 |                   
  question.ts   |       0 |        0 |       0 |       0 |                   
----------------|---------|----------|---------|---------|-------------------

Test Suites: 2 failed, 5 passed, 7 total
Tests:       23 passed, 23 total
Snapshots:   0 total
Time:        4.415 s
Ran all test suites.
